[CW7]
+ SyncProxyAndroid SDK: Add DIDResult struct.
+ Add endTime parameter to SetMediaClockTimer UI.
+ SyncProxyAndroid SDK: Add endTime parameter to SetMediaClockTimer request.
* SyncProxyAndroid SDK: Update VehicleDataType enum. Add new parameters to OnVehicleData notification. Sync *VehicleData* messages' parameters with the specification.
- SyncProxyAndroid SDK: removed heartbeat feature
* SyncProxyAndroid SDK: Update FileType enum.
* SyncProxyAndroid SDK: Add prerecordedSpeech parameter to RegisterAppInterfaceResponse class.
* Fix 'USB: Application is not recognizable by SDLCore' if the application is closed when the stream is opened.
* SyncProxyAndroid SDK: Update HeadLampStatus struct. Add headLampStatus parameter to OnVehicleData notification.
* SyncProxyAndroid SDK: Add displayCapabilities parameter to SetDisplayLayoutResponse class.
+ SyncProxyAndroid SDK: Add ImageFieldName enum, ImageField struct, ScreenParams struct. Update DisplayCapabilities struct.

[CW6]
+ SyncProxyAndroid SDK: changed video for Alice build
+ SyncProxyAndroid SDK: changed registration/unregistration procedure.
+ SyncProxyAndroid SDK: changed sync logic at transports
+ SyncProxyAndroid SDK: Add WarningLightStatus enum (replaces TirePressureTellTale enum). Update TireStatus struct.
* SyncProxyAndroid SDK: Update PRNDL enum's values from the spec.
* SyncProxyAndroid SDK: Fix session id at application resumption.
+ SyncProxyAndroid SDK: Allow to send requests with unknown function names.
+ SyncProxyAndroid SDK: Implement integration of OnSystemRequest notification and system PutFile request.
+ SyncProxyAndroid SDK: changed reconnection scheduling logic

[CW5]
+ SyncProxyAndroid SDK: Add KEYBOARD value to TriggerSource enum.
- SyncProxyAndroid SDK: Revert "Modify how PutFile request is sent. If it's a big request, it's split into multiple small protocol messages and each one is sent after a previous confirmation."
+ SyncProxyAndroid SDK: Add SystemRequest-related RPC classes.