@@ -110,7 +110,6 @@ public class Names {
 	public static final String samplingRate = "samplingRate";
 	public static final String audioType = "audioType";
 	public static final String satRadioESN = "satRadioESN";
-	public static final String encrypted = "encrypted";
 	public static final String dtcList = "dtcList";
 	public static final String tryAgainTime = "tryAgainTime";
 
@@ -450,4 +449,5 @@ public class Names {
     public static final String numCustomPresetsAvailable = "numCustomPresetsAvailable";
     public static final String prerecordedSpeech = "prerecordedSpeech";
     public static final String endTime = "endTime";
+    public static final String didResult = "didResult";
 }
